[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evremixes"
description = "Evanescence Remix Downloader"
version = "4.1.0"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dsutil @ git+https://gitlab.dannystewart.com/danny/dsutil.git",
    "halo>=0.0.31",
    "inquirer>=3.4.0",
    "mutagen>=1.47.0",
    "pillow>=11.0.0",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "types-requests>=2.32.0.20241016",
]

[dependency-groups]
dev = ["mypy", "pyinstaller", "ruff"]

[tool.hatch.version]
path = "src/evremixes/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/evremixes"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
evremixes = "evremixes.main:main"
