[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "evremixes"
version = "4.4.0"
description = "Evanescence Remix Downloader"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dsutil @ git+https://gitlab.dannystewart.com/danny/dsutil.git",
    "halo>=0.0.31",
    "inquirer>=3.4.0",
    "mutagen>=1.47.0",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "termcolor>=2.5.0",
    "types-requests>=2.32.0.20241016",
]

[project.optional-dependencies]
dev = ["mypy>=1.14.1", "ruff>=0.8.5"]

[tool.poetry]
packages = [{ include = "evremixes", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.5"
mypy = "^1.14.1"

[project.scripts]
evremixes = "evremixes.main:main"
