[project]
name = "evremixes"
version = "4.4.2"
description = "Evanescence Remix Downloader"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
include = [{ include = "evremixes", from = "src" }]
dependencies = [
    "dsbase (>=0.1.2,<0.2.0)",
    "halo (>=0.0.31,<0.0.32)",
    "inquirer (>=3.4.0,<4.0.0)",
    "mutagen (>=1.47.0,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "types-requests (>=2.32.0.20250306,<3.0.0.0)",
]

[tool.poetry]
packages = [{ include = "evremixes", from = "src" }]

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
evremixes = "evremixes.main:main"
